<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".EditClubActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_club_add"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etClubID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/club_id"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/etClubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/club_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_button"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/button_add" />

    </LinearLayout>

</LinearLayout>